--- a/DV Project.ipynb
+++ b/DV Project.ipynb
@@ -13769,17 +13769,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1):\n",
-    "    temp={}\n",
+    "\n",
+    "for i in range(100):\n",
     "    name = topic_count_csv[0][i]\n",
     "    qlist = dict_from_file[name]\n",
-    "    member = {}\n",
-    "    for j in range(len(df_answer)):\n",
-    "        if df_answer['Question Id'][0] in qlist:\n",
+    "    name = name.split(\"-\")\n",
+    "    name = name[0]\n",
+    "    newdf = pd.DataFrame(df_questions[df_questions['Question Id'].isin(qlist)])\n",
+    "    ndf = list(newdf['Question Title'])\n",
+    "    outfile = open(\"docs/Question-Corpus/\"+name+\".txt\",\"w\")\n",
+    "    for j in range(len(ndf)):\n",
+    "        outfile.write(ndf[j])\n",
+    "        outfile.write(\" \")\n",
+    "    outfile.close()\n",
     "            \n",
     "        "
    ]
@@ -13796,22 +13802,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_df = pd.DataFrame(columns=['key','value','date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " name = topic_count_csv[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qlist = dict_from_file[name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newdf = pd.DataFrame(df_questions[df_questions['Question Id'].isin(qlist)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ndf = list(newdf['Question Title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5035001"
+       "'How painful is a root canal?'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_answer['Question Id'][0]"
+    "ndf[0]\n"
    ]
   },
   {
